--- a/src/config.json
+++ b/src/config.json
@@ -6,14 +6,25 @@
         "jwtsecretkey": "33b9b3de94a42d19f47df7021954eaa8",
         "jwtrefsecretkey": "dc7d98009d61ac52e4d1b64de55b7165",
         "jwt_token_exp_minutes" : 60,
-        "jwt_reftoken_exp_days": 1
+        "jwt_reftoken_exp_days": 1,
+        "dateformat_monthlyreport": "2006/01",
+        "dateformat_print": "02 January 2006",
+        "dateformat_global": "2006-01-02",
+        "dateformat_timestamp": "2006-01-02 15:04:05",
+        "dateformat_frontend": "02/01/2006",
+        "dateformat_year": "06",
+        "dateformat_years": "2006",
+        "dateformat_month": "1",
+        "dateformat_day": "2",
+        "upload_path": "./uploads/"
+        
     },
     "database": {
         "__host": "host.docker.internal",
         "host": "localhost",
         "port": "3306",
-        "user": "wcl",
-        "pwd": "wcl",
+        "user": "root",
+        "pwd": "root",
         "dbname": "apps_v3"
     }
 }
